ferric/tests/ui/syntax_err_03.stderr
error: expected let | use | observe | query
 --> tests/ui/syntax_err_03.rs:8:5
  |
8 |     letu rain : bool ~ Bernoulli::new( 0.2 );
  |     ^^^^
